"""Particle."""

class Particle:

    """Particle is a particle."""
