"""Simulation."""

class Simulation:

    """Simulation manages the simulation."""