"""The GUI Controller of the Simulation."""

class SimulationWindowController:

    """The GUI Controller of the Simulation."""

