"""Speed."""

class Speed:

    """Speed is a two-dimensional speed."""
